Fix z-index del navbar

--- a/public/css/header/header.css
+++ b/public/css/header/header.css
@@ -14,6 +14,7 @@ header nav {
   padding-bottom: 10px;
   font-size: 14px;
   position: fixed;
+  z-index: 99;
 }
 
 header .navbar-menus {
